--- a/apps/web/src/pages/integration/components/integration/style.less
+++ b/apps/web/src/pages/integration/components/integration/style.less
@@ -3,7 +3,7 @@
     padding: @padding-md;
     background-color: var(--component-background);
     border: 1px solid var(--component-background);
-    border-radius: @border-radius-base;
+    border-radius: @border-radius-md;
     cursor: pointer;
     transition: 0.3s;
 
