--- a/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/msc-content/functions/style.less
@@ -20,7 +20,8 @@
             width: 0;
             margin: 0;
             overflow: hidden;
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
+            color: var(--text-color-base);
             text-overflow: ellipsis;
             white-space: nowrap;
         }
