--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/codec/styles.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/codec/styles.less
@@ -3,7 +3,7 @@
         margin-bottom: @margin-lg;
     }
 
-    .ms-modal-content {
+    &-content {
         padding-top: @padding-xxs;
         padding-bottom: @padding-xs;
     }
