--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/style.less
@@ -2,7 +2,7 @@
     height: 100%;
     padding: @padding-lg;
     background-color: var(--component-background);
-    border-radius: @border-radius-base;
+    border-radius: @border-radius-md;
 
     .@{prefix}-view-inner {
         display: flex;
