--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/service/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/service/style.less
@@ -20,7 +20,7 @@
             width: 0;
             margin: 0;
             overflow: hidden;
-            font-weight: @font-weight-bold;
+            font-weight: @font-weight-medium;
             text-overflow: ellipsis;
             white-space: nowrap;
         }
