feat: select component increases the display of empty data and the form adds a disabled style

--- a/apps/web/src/components/entity-select/components/entity-option/style.less
+++ b/apps/web/src/components/entity-select/components/entity-option/style.less
@@ -32,6 +32,7 @@
         overflow: hidden;
 
         &__title {
+            padding-right: @padding-md;
             font-weight: @font-weight-regular;
             .text-size(@font-size-md);
         }
