--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -34,11 +34,6 @@
     }
 }
 
-// ---------- Form ----------
-.@{mui-prefix}FormLabel-asterisk {
-    color: var(--text-color-error);
-}
-
 // ---------- Tabs ----------
 .@{mui-prefix}Tabs-root {
     .@{mui-prefix}Tab-root {
@@ -99,9 +94,11 @@ input.@{mui-prefix}InputBase-input {
             transition: border 0.3s;
         }
     }
+
     &.@{mui-prefix}-focused {
         .@{mui-prefix}OutlinedInput-notchedOutline {
             border-width: 1px;
+            box-shadow: 0 0 0 2px #7b4efa3d;
         }
 
         &:hover {
@@ -113,6 +110,12 @@ input.@{mui-prefix}InputBase-input {
 }
 
 // ---------- Dialog ----------
+.@{mui-prefix}Dialog-root {
+    .@{mui-prefix}Backdrop-root {
+        background-color: rgba(0, 0, 0, 0.38);
+    }
+}
+
 .@{mui-prefix}Dialog-container {
     .@{mui-prefix}Paper-root.@{mui-prefix}Dialog-paper {
         border-radius: @border-radius-md;
@@ -165,6 +168,18 @@ input.@{mui-prefix}InputBase-input {
     }
 }
 
+// ---------- Autocomplete ----------
+.@{mui-prefix}Autocomplete-listbox {
+    .@{mui-prefix}Autocomplete-option {
+        .text-size(@font-size-md);
+
+        &.@{mui-prefix}-focused:hover {
+            background-color: var(--component-background-gray);
+            transition: background-color 0.1s ease;
+        }
+    }
+}
+
 // ---------- Menu ----------
 .@{mui-prefix}List-root {
     .@{mui-prefix}MenuItem-root {
@@ -176,6 +191,11 @@ input.@{mui-prefix}InputBase-input {
 }
 
 // ---------- Form ----------
+.@{mui-prefix}FormLabel-asterisk,
+.@{mui-prefix}FormControlLabel-asterisk {
+    color: var(--text-color-error);
+}
+
 .@{mui-prefix}FormControl-root {
     div&,
     &.@{mui-prefix}FormControl-fullWidth&,
@@ -201,6 +221,29 @@ input.@{mui-prefix}InputBase-input {
         }
     }
 
+    .@{mui-prefix}FormControlLabel-root {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        margin-left: 0;
+
+        & > div {
+            display: flex;
+            flex-direction: row-reverse;
+        }
+
+        .@{mui-prefix}FormControlLabel-label {
+            display: inline-block;
+            margin-bottom: @margin-xxs;
+            color: var(--text-color-primary);
+            .text-size(@font-size-md);
+        }
+
+        .@{mui-prefix}FormControlLabel-asterisk {
+            margin-right: @margin-xxs;
+        }
+    }
+
     .@{mui-prefix}FormLabel-root {
         position: unset;
         display: flex;
@@ -215,12 +258,30 @@ input.@{mui-prefix}InputBase-input {
             color: var(--text-color-primary);
         }
 
+        &.@{mui-prefix}-disabled {
+            color: var(--text-color-primary);
+        }
+
         .@{mui-prefix}FormLabel-asterisk {
             margin-right: @margin-xxs;
         }
 
         &.@{mui-prefix}-error {
             color: var(--text-color-primary);
+        }
+    }
+
+    .@{mui-prefix}-disabled {
+        &.@{mui-prefix}InputBase-root {
+            background: var(--border-color-gray-light);
+
+            .@{mui-prefix}InputBase-input {
+                -webkit-text-fill-color: var(--text-color-secondary);
+            }
+
+            .@{mui-prefix}OutlinedInput-notchedOutline {
+                border: 1px solid var(--gray-4);
+            }
         }
     }
 
@@ -237,12 +298,5 @@ input.@{mui-prefix}InputBase-input {
         margin: 0;
         color: var(--text-color-tertiary);
         .text-size(@font-size-md);
-    }
-}
-
-// ---------- Dialog ----------
-.@{mui-prefix}Dialog-root {
-    .@{mui-prefix}Backdrop-root {
-        background-color: rgba(0, 0, 0, 0.38);
     }
 }
