--- a/apps/web/src/plugin/components/icon-color-select/style.less
+++ b/apps/web/src/plugin/components/icon-color-select/style.less
@@ -5,8 +5,8 @@
         border-radius: @border-radius-base;
     }
 
-    &-menu {
-        padding: 0 !important;
+    &-menu.@{mui-prefix}MenuItem-root {
+        padding: 0;
     }
 
     &-submit {
