--- a/apps/web/src/plugin/components/icon-select/style.less
+++ b/apps/web/src/plugin/components/icon-select/style.less
@@ -1,10 +1,28 @@
 .icon-select {
     &-list {
-        max-height: 400px;
-        background: var(--main-background);
+        position: relative;
+        width: 412px;
+        height: 380px;
+        overflow-y: hidden;
+        background-color: var(--main-background);
+
+        &-search {
+            width: 100%;
+            padding: @padding-xxs @padding-md @padding-sm @padding-md;
+        }
+
+        &-container {
+            width: 100%;
+            height: calc(100% - 36px - 16px);
+        }
 
         &-main {
-            width: 420px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            justify-content: space-between;
+            width: 412px;
+            padding: 0 @padding-md;
 
             &::after {
                 display: block;
@@ -13,7 +31,7 @@
             }
         }
 
-        .MuiInputBase-root {
+        .@{mui-prefix}InputBase-root {
             height: 36px;
         }
     }
@@ -28,23 +46,37 @@
 
     &-icon {
         display: block;
-        float: left;
         padding: @padding-sm;
-        margin: @margin-xs;
         line-height: 0;
-
-        &-active {
-            background: var(--primary-color-1);
-            border-radius: 50%;
-        }
-
-        &-active &-img {
-            color: var(--primary-color-base);
-        }
+        color: var(--icon-color-gray-secondary);
 
         &:hover {
             background: rgba(0, 0, 0, 0.04);
             border-radius: 50%;
         }
+
+        &-active {
+            background: var(--primary-color-1);
+            border-radius: 50%;
+
+            &:hover {
+                background: var(--primary-color-1);
+            }
+        }
+
+        &-active &-img {
+            color: var(--primary-color-base);
+        }
+    }
+}
+
+.ms-icon-select-menu-paper {
+    &.@{mui-prefix}Paper-root {
+        background-color: var(--main-background);
+        background-image: unset;
+    }
+
+    .@{mui-prefix}MenuItem-root {
+        padding: 0;
     }
 }
