feat: Optimize the table pro componeny style

--- a/apps/web/src/components/table-pro/style.less
+++ b/apps/web/src/components/table-pro/style.less
@@ -62,6 +62,12 @@
             outline: none;
         }
 
+        .@{mui-prefix}DataGrid-row {
+            &:hover {
+                background-color: var(--gray-1);
+            }
+        }
+
         // Overlay Mui style: Avoid horizontal scrolling beyond the width of the container
         .@{mui-prefix}DataGrid-columnHeader {
             overflow: hidden;
