feat: Adjust the chip style of the user list

--- a/apps/web/src/pages/user-role/views/user/style.module.less
+++ b/apps/web/src/pages/user-role/views/user/style.module.less
@@ -12,12 +12,14 @@
     .@{mui-prefix}Tooltip-tooltip {
         .@{mui-prefix}Chip-root {
             background-color: var(--gray-2);
+            border-radius: @border-radius-xs;
         }
     }
 
     .@{prefix}-tooltip-cont {
         .@{mui-prefix}Chip-root {
             background-color: var(--gray-2);
+            border-radius: @border-radius-xs;
         }
     }
 }
