--- a/apps/web/src/pages/auth/views/login/style.less
+++ b/apps/web/src/pages/auth/views/login/style.less
@@ -18,6 +18,7 @@
         width: 444px;
         padding: 48px;
         border-radius: @border-radius-md;
+        box-shadow: unset;
         transform: translate(-50%, -50%);
 
         &.hidden {
