--- a/apps/web/src/styles/index.less
+++ b/apps/web/src/styles/index.less
@@ -127,16 +127,18 @@ body {
 }
 
 .@{mui-prefix}Toolbar-root {
-    position: relative;
+    &:has(.@{prefix}-tabs) {
+        position: relative;
 
-    &::after {
-        position: absolute;
-        right: 0;
-        bottom: 0;
-        width: 100%;
-        height: 1px;
-        background-color: var(--border-color-base);
-        content: '';
+        &::after {
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: 1px;
+            background-color: var(--border-color-base);
+            content: '';
+        }
     }
 }
 
