--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input/style.less
@@ -1,19 +1,60 @@
 .@{prefix}-param-input {
+    padding: @padding-md;
+    background-color: var(--component-background-gray);
+    border-radius: @border-radius-base;
+
     &-item {
         display: flex;
         gap: @margin-xs;
         align-items: center;
-        > .@{mui-prefix}FormControl-root {
-            flex: 1;
-            &.@{prefix}-param-output-switch {
-                flex-direction: row;
-                align-items: center;
+        margin-bottom: @margin-sm;
 
-                .@{prefix}-param-output-switch-label {
-                    font-size: @font-size-2;
-                    color: var(--gray-9);
+        &:first-child {
+            > [class^=~"@{prefix}-param-input-"] {
+                .label {
+                    height: auto;
+                    margin-bottom: @margin-xxs;
+                    visibility: visible;
+                    .text-size(@font-size-base);
                 }
             }
         }
+
+        > [class^=~"@{prefix}-param-input-"] {
+            flex: 1;
+
+            .label {
+                height: 1px;
+                margin-bottom: -1px;
+                overflow: hidden;
+                visibility: hidden;
+                .text-size(@font-size-base);
+            }
+        }
+
+        > .@{prefix}-param-input-required {
+            flex: 0;
+        }
+
+        .@{prefix}-param-input-name .@{mui-prefix}FormControl-root,
+        .@{prefix}-param-input-type .@{mui-prefix}InputBase-root {
+            margin: 0;
+            background-color: var(--component-background);
+            border-radius: @border-radius-base;
+        }
+
+        .btn-delete {
+            align-self: end;
+            color: var(--icon-color-gray-light);
+
+            &:hover {
+                color: var(--icon-color-gray-secondary);
+            }
+        }
+    }
+
+    .btn-add {
+        min-width: auto;
+        padding: @padding-xxs @padding-xs;
     }
 }
