feat: Solve the problem that style spacing disappears under the dashboard full screen

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -111,6 +111,10 @@
             overflow: hidden scroll;
             background: var(--gray-color-2);
 
+            &__fullscreen {
+                padding-top: @margin-md;
+            }
+
             & > div {
                 height: 100%;
             }
