--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -38,7 +38,7 @@
             display: flex;
             gap: @margin-xs;
             align-items: center;
-            margin-bottom: @margin-md;
+            margin-bottom: @margin-sm;
 
             > .@{mui-prefix}FormControl-root {
                 flex: 1;
@@ -61,9 +61,9 @@
                 }
             }
 
-            &-last {
-                margin-bottom: @margin-sm;
-            }
+            // &-last {
+            //     margin-bottom: @margin-sm;
+            // }
 
             .btn-delete {
                 color: var(--icon-color-gray-light);
