--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -1,17 +1,48 @@
 .@{prefix}-param-assign-input {
+    padding: @padding-md;
+    background-color: var(--component-background-gray);
+    border-radius: @border-radius-base;
+
     &-item {
         display: flex;
         gap: @margin-xs;
         align-items: center;
-        margin-bottom: @margin-md;
+        margin-bottom: @margin-sm;
+
+        &:not(&:first-child) {
+            .@{mui-prefix}FormControl-root {
+                .@{mui-prefix}FormLabel-root {
+                    display: none;
+                }
+            }
+        }
 
         .@{mui-prefix}FormControl-root {
-            margin: 0;
+            margin: 0 !important;
+
+            .@{mui-prefix}InputBase-root {
+                background-color: var(--component-background);
+                border-radius: @border-radius-base;
+            }
         }
 
         > .@{prefix}-param-input-select,
         > .@{mui-prefix}FormControl-root {
             flex: 1;
         }
+
+        .btn-delete {
+            align-self: end;
+            color: var(--icon-color-gray-light);
+
+            &:hover {
+                color: var(--icon-color-gray-secondary);
+            }
+        }
+    }
+
+    .btn-add {
+        min-width: auto;
+        padding: @padding-xxs @padding-xs;
     }
 }
