fix: Integration embedded ns style part two

--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/codec/styles.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/config/component/codec/styles.less
@@ -3,9 +3,12 @@
         margin-bottom: @margin-lg;
     }
 
+    .@{prefix}-modal-content {
+        padding-top: 0;
+    }
+
     &-content {
         padding-top: @padding-xxs;
-        padding-bottom: @padding-xs;
     }
 
     .@{mui-prefix}Alert-root {
