--- a/apps/web/src/pages/integration/views/integration-detail/components/ns-content/service/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/ns-content/service/style.less
@@ -1,8 +1,8 @@
-.@{prefix}-int-feat-card {
+.@{prefix}-ns-service-card {
     padding: @padding-lg;
     background-color: var(--component-background);
     border: 1px solid transparent;
-    border-radius: @border-radius-sm;
+    border-radius: @border-radius-md;
     cursor: pointer;
     transition: .3s;
 
