--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
@@ -2,7 +2,7 @@
     position: relative;
 
     .@{mui-prefix}FormControl-root {
-        margin: 0;
+        margin: 0 !important;
     }
 
     .@{mui-prefix}InputBase-root {
