feat: dashboard right part icon style change

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -112,7 +112,7 @@
             justify-content: space-between;
             padding: 0 @padding-xxl 0 @padding-md;
 
-            .home-dashboard {
+            .dashboard-button-icon {
                 display: flex;
                 align-items: center;
                 justify-content: center;
