--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -39,7 +39,7 @@
         }
 
         .@{mui-prefix}ToggleButton-root {
-            padding: @padding-xxs @padding-xs;
+            padding: 2px 6px;
         }
     }
 
@@ -106,7 +106,8 @@
             .input-wrapper {
                 flex: 1;
 
-                .@{mui-prefix}InputBase-root:hover .@{mui-prefix}OutlinedInput-notchedOutline {
+                .@{mui-prefix}InputBase-root:hover .@{mui-prefix}OutlinedInput-notchedOutline,
+                .@{mui-prefix}InputBase-root.@{mui-prefix}-focused .@{mui-prefix}OutlinedInput-notchedOutline {
                     z-index: 1;
                 }
 
@@ -116,6 +117,15 @@
                     > .@{prefix}-param-select {
                         flex: 1;
                         width: 0;
+
+                        .@{mui-prefix}FormControl-root {
+                            margin-bottom: 0;
+
+                            .@{mui-prefix}FormLabel-root {
+                                display: none;
+                            }
+                        }
+
                         .@{mui-prefix}OutlinedInput-notchedOutline {
                             border-radius: @border-radius-base 0 0 0;
                         }
@@ -179,6 +189,10 @@
         padding-bottom: @padding-xxs;
         margin-bottom: @margin-md;
         border-bottom: 1px solid var(--border-color-base);
+
+        .@{prefix}-code-editor {
+            margin-bottom: @margin-md;
+        }
     }
 }
 
