feat: Adjust the button and switch styles

--- a/apps/web/src/pages/workflow/components/action-log/components/card/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/card/style.less
@@ -9,6 +9,10 @@
         border-radius: @border-radius-sm;
         box-shadow: none;
 
+        &.@{mui-prefix}Paper-elevation {
+            box-shadow: none;
+        }
+
         &:first-of-type {
             border-radius: @border-radius-sm;
         }
