--- a/apps/web/src/pages/workflow/components/action-log/components/tree/style.less
+++ b/apps/web/src/pages/workflow/components/action-log/components/tree/style.less
@@ -6,6 +6,10 @@
     &.MuiPaper-root {
         box-shadow: none;
 
+        &.@{mui-prefix}Paper-elevation {
+            box-shadow: none;
+        }
+
         &.Mui-expanded {
             margin-top: 0;
             margin-bottom: @margin-xxs;
