--- a/apps/web/src/pages/workflow/components/import-modal/components/style.less
+++ b/apps/web/src/pages/workflow/components/import-modal/components/style.less
@@ -26,8 +26,8 @@
     }
     .@{prefix}-file-tip {
         margin: 0;
-        font-size: @font-size-sm;
         color: var(--border-color-active);
+        .text-size(@font-size-md);
     }
 
     .@{prefix}-file-list {
