--- a/packages/shared/src/styles/variables.less
+++ b/packages/shared/src/styles/variables.less
@@ -13,7 +13,7 @@
 
 // ---------- Font ----------
 @font-family: '-apple-system', 'Helvetica Neue', 'PingFang SC', 'SegoeUI', 'Noto Sans CJK SC',
-    'sans-serif';
+    sans-serif; // 'Helvetica', 'Microsoft YaHei', '微软雅黑', 'Arial';
 @font-family-code: 'Courier', 'monospace';
 
 // Font Size
