--- a/apps/web/src/plugin/plugins/pie-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/pie-chart/view/style.less
@@ -22,6 +22,11 @@
         canvas {
             width: 100%;
             height: 100%;
+        }
+    }
+
+    &--preview {
+        canvas {
             max-height: 40vh;
         }
     }
