feat: Add built-in Output node and corresponding processing logic

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -26,6 +26,7 @@
             }
         }
 
+        > .@{prefix}-param-select,
         > .@{prefix}-param-input-select,
         > .@{mui-prefix}FormControl-root {
             flex: 1;
