--- a/apps/web/src/pages/workflow/views/editor/components/node-container/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/node-container/style.less
@@ -74,6 +74,7 @@
             flex: 1;
             width: 0;
             font-weight: @font-weight-medium;
+            text-align: left;
 
             .text-size(@font-size-base);
         }
