feat: Optimize the dashboard modal component style

--- a/apps/web/src/plugin/plugins/trigger/view/style.less
+++ b/apps/web/src/plugin/plugins/trigger/view/style.less
@@ -39,7 +39,11 @@
     }
 
     &-form {
-        padding-top: @padding-sm;
+        margin-top: @margin-xxs;
+
+        .form-contain {
+            margin-top: 0;
+        }
     }
 }
 
