feat: Adjust dashboard spacing and chart scaling logic

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -108,7 +108,7 @@
             position: relative;
             flex: 1;
             width: 100%;
-            padding-top: 68px;
+            padding-top: 64px;
             overflow: hidden scroll;
             background: var(--gray-color-2);
 
@@ -134,7 +134,7 @@
             align-items: center;
             justify-content: space-between;
             width: calc(100% - 8px);
-            padding: @padding-md @padding-md @padding-md @padding-md;
+            padding: @padding-sm;
             margin-left: -@margin-xs;
             background: rgba(242, 243, 245, 0.8);
             backdrop-filter: blur(16px);
