feat: compatible Workflow Form Style

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/conditions-input/style.less
@@ -128,7 +128,7 @@
                     > .@{mui-prefix}InputBase-root {
                         flex: 1;
                         width: 0;
-                        margin-left: -1px;
+                        margin: @margin-xxs 0 @margin-md;
 
                         .@{mui-prefix}OutlinedInput-notchedOutline {
                             border-radius: 0 @border-radius-base 0 0;
