--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -19,8 +19,12 @@
         .queue-item {
             display: flex;
             gap: @margin-xs;
-            align-items: center;
+            align-items: flex-end;
             margin-bottom: @margin-md;
+
+            & > .@{mui-prefix}ButtonBase-root {
+                margin-bottom: @margin-xxs;
+            }
 
             > .@{mui-prefix}FormControl-root {
                 flex: 1;
@@ -33,6 +37,14 @@
         }
     }
 
+    div& > :not(style) ~ :not(style) {
+        margin: @margin-md 0;
+
+        &.@{prefix}-timer-input-exec-interval {
+            margin-top: 0;
+        }
+    }
+
     &-exec-interval {
         display: flex;
         gap: @margin-xs;
@@ -40,7 +52,6 @@
 
         > .@{mui-prefix}FormControl-root {
             flex: 1;
-            margin: 0;
         }
     }
 }
