--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/entity-assign-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/entity-assign-select/style.less
@@ -2,7 +2,7 @@
     &-item {
         display: flex;
         gap: @margin-xs;
-        align-items: center;
+        align-items: flex-end;
         margin-bottom: @margin-md;
 
         .@{mui-prefix}FormControl-root {
@@ -12,6 +12,17 @@
         > .@{prefix}-param-input-select,
         > .@{mui-prefix}Autocomplete-root {
             flex: 1;
+        }
+
+        .@{prefix}-param-input-select,
+        .@{mui-prefix}Autocomplete-root {
+            .@{mui-prefix}FormControl-root {
+                margin-bottom: 0;
+            }
+        }
+
+        & > .@{mui-prefix}ButtonBase-root {
+            margin-bottom: @margin-xxs;
         }
     }
 }
