feat: Adjust the Skeleton style

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -177,6 +177,9 @@ input.@{mui-prefix}InputBase-input {
         color: var(--border-color-gray);
     }
 }
+.@{mui-prefix}Checkbox-root:hover {
+    background-color: unset;
+}
 
 // ---------- Paper ----------
 .@{mui-prefix}Paper-root {
