feat: Optimize dashboard margin

--- a/apps/web/src/pages/dashboard/style.less
+++ b/apps/web/src/pages/dashboard/style.less
@@ -108,7 +108,8 @@
             position: relative;
             flex: 1;
             width: 100%;
-            padding-top: 64px;
+            padding: 74px @padding-xxs 0;
+            margin-bottom: @margin-xxs;
             overflow: hidden scroll;
             background: var(--gray-color-2);
 
@@ -134,7 +135,7 @@
             align-items: center;
             justify-content: space-between;
             width: calc(100% - 8px);
-            padding: @padding-sm;
+            padding: @padding-md;
             margin-left: -@margin-xs;
             background: rgba(242, 243, 245, 0.8);
             backdrop-filter: blur(16px);
