--- a/apps/web/src/pages/integration/views/integration-detail/components/msc-content/config/style.less
+++ b/apps/web/src/pages/integration/views/integration-detail/components/msc-content/config/style.less
@@ -63,6 +63,11 @@
                     font-weight: @font-weight-medium;
                 }
 
+                .@{mui-prefix}SvgIcon-root {
+                    color: var(--text-color-secondary);
+                    cursor: pointer;
+                }
+
                 &-left {
                     display: flex;
                     flex: 1;
