--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-input-select/style.less
@@ -11,10 +11,11 @@
 
     & &-chip {
         position: absolute;
-        top: @margin-xs;
+        top: 24px;
         left: @margin-sm;
         max-width: calc(100% - 72px);
         border-radius: @border-radius-base;
+        transform: translateY(50%);
 
         .@{mui-prefix}Chip-label {
             .name {
