fix: Adjust dashboard dataCard title fontSize

--- a/apps/web/src/plugin/plugins/data-card/view/style.less
+++ b/apps/web/src/plugin/plugins/data-card/view/style.less
@@ -57,7 +57,7 @@
         &__title {
             max-width: calc(100% - 28px);
             margin-left: @margin-xxs;
-            font-weight: 300;
+            font-weight: @font-weight-regular;
             // .text-size(@font-size-base);
             color: var(--text-color-secondary);
         }
