--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/entity-assign-select/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/entity-assign-select/style.less
@@ -5,7 +5,7 @@
         align-items: flex-end;
         margin-bottom: @margin-md;
 
-        .@{mui-prefix}FormControl-root {
+        div.@{mui-prefix}FormControl-root {
             margin: 0;
         }
 
@@ -16,7 +16,7 @@
 
         .@{prefix}-param-input-select,
         .@{mui-prefix}Autocomplete-root {
-            .@{mui-prefix}FormControl-root {
+            div.@{mui-prefix}FormControl-root {
                 margin-bottom: 0;
             }
         }
