--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/param-assign-input/style.less
@@ -5,7 +5,7 @@
         align-items: flex-end;
         margin-bottom: @margin-md;
 
-        .@{mui-prefix}FormControl-root {
+        div.@{mui-prefix}FormControl-root {
             margin: 0;
         }
 
@@ -15,7 +15,7 @@
         }
 
         .@{prefix}-param-input-select {
-            .@{mui-prefix}FormControl-root {
+            div.@{mui-prefix}FormControl-root {
                 margin-bottom: 0;
             }
         }
