--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/timer-input/style.less
@@ -26,7 +26,7 @@
                 margin-bottom: @margin-xxs;
             }
 
-            > .@{mui-prefix}FormControl-root {
+            > div.@{mui-prefix}FormControl-root {
                 flex: 1;
                 margin: 0;
             }
