--- a/apps/web/src/plugin/components/icon-select/style.less
+++ b/apps/web/src/plugin/components/icon-select/style.less
@@ -20,7 +20,7 @@
             display: flex;
             flex-wrap: wrap;
             gap: 12px;
-            justify-content: space-between;
+            // justify-content: space-between;
             width: 412px;
             padding: 0 @padding-md;
 
