--- a/apps/web/src/layouts/components/layout-skeleton/style.less
+++ b/apps/web/src/layouts/components/layout-skeleton/style.less
@@ -8,10 +8,9 @@
 .@{prefix}-skeleton-left {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     width: 56px;
     height: 100%;
-    padding: 0 @padding-md;
     background-color: var(--component-background);
 
     &-unCollapsed {
@@ -31,6 +30,7 @@
     .@{prefix}-logo {
         margin-top: @margin-xs;
         margin-bottom: @margin-xxs;
+        margin-left: @margin-xs;
     }
 
     > div:nth-of-type(1) {
@@ -39,6 +39,7 @@
         align-items: center;
         width: 100%;
         height: 70%;
+        padding: 0 @padding-md;
 
         div {
             display: flex;
@@ -53,6 +54,7 @@
                 height: 20px;
             }
         }
+
     }
 
     > div:nth-of-type(2) {
@@ -63,6 +65,7 @@
         width: 100%;
         height: 30%;
         min-height: 200px;
+        padding: 0 @padding-md;
         padding-bottom: @padding-lg;
 
         .@{mui-prefix}Skeleton-root:first-child {
