feat: Optimizes the style of the checkbox component

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -232,9 +232,9 @@ input.@{mui-prefix}InputBase-input {
 }
 
 label.@{mui-prefix}FormControlLabel-root {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: flex-start;
+    // display: flex;
+    // flex-direction: column-reverse;
+    // align-items: flex-start;
     margin-left: 0;
 
     & > div {
