--- a/apps/web/src/plugin/plugins/radar-chart/view/style.less
+++ b/apps/web/src/plugin/plugins/radar-chart/view/style.less
@@ -19,10 +19,10 @@
         justify-content: center;
         overflow: hidden;
 
-        canvas {
-            width: 100%;
-            height: 100%;
-            max-height: 40vh;
-        }
+        // canvas {
+        //     width: 100%;
+        //     height: 100%;
+        //     max-height: 40vh;
+        // }
     }
 }
