feat: Optimize the sidebar user avatar display

--- a/apps/web/src/components/sidebar/style.less
+++ b/apps/web/src/components/sidebar/style.less
@@ -82,7 +82,7 @@
             transition: transform 0.3s ease-out;
 
             .@{mui-prefix}Avatar-root {
-                font-size: @font-size-xl;
+                font-family: Helvetica;
                 vertical-align: middle;
             }
 
@@ -146,6 +146,7 @@
     & &__avatar {
         min-width: unset;
         margin-right: @margin-sm;
+        font-family: Helvetica;
     }
 
     & &__text {
