feat: Optimize the form style for adding entity pages

--- a/apps/web/src/pages/entity/components/add-modal/components/enums-input/style.less
+++ b/apps/web/src/pages/entity/components/add-modal/components/enums-input/style.less
@@ -37,7 +37,7 @@
     &-field {
         display: flex;
         gap: @margin-xs;
-        align-items: center;
+        align-items: flex-end;
         margin-bottom: @margin-md;
 
         .field-key {
@@ -46,6 +46,10 @@
 
         .field-value {
             flex: 1;
+        }
+
+        .field-btn-delete {
+            margin-bottom: @margin-xxs;
         }
     }
 }
