feat: Add http & httpin node for workflow editor

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/style.less
@@ -123,9 +123,14 @@
             }
 
             .@{prefix}-node-form-group-item:last-child {
-                > .@{mui-prefix}FormControl-root:only-child {
+                > .@{mui-prefix}FormControl-root:last-child {
                     margin-bottom: 0;
                 }
+            }
+
+            &-header {
+                display: flex;
+                justify-content: space-between;
             }
 
             &-title {
