feat: Adjust confirm dialog size

--- a/apps/web/src/styles/mui-polyfill.less
+++ b/apps/web/src/styles/mui-polyfill.less
@@ -149,8 +149,11 @@ input.@{mui-prefix}InputBase-input {
 
 .@{mui-prefix}Dialog-container {
     .@{mui-prefix}Paper-root.@{mui-prefix}Dialog-paper {
-        min-width: 444px; // all dialog min width
         border-radius: @border-radius-md;
+
+        .@{mui-prefix}DialogContent-root {
+            min-width: 444px; // all dialog min width
+        }
     }
 }
 
