--- a/apps/web/src/pages/auth/views/register/style.less
+++ b/apps/web/src/pages/auth/views/register/style.less
@@ -25,6 +25,10 @@
             display: none;
         }
 
+        &.@{mui-prefix}Paper-root {
+            box-shadow: unset;
+        }
+
         .@{mui-prefix}InputBase-root {
             height: 40px;
         }
@@ -39,7 +43,7 @@
     .@{prefix}-auth-form {
         margin: 40px 0 @margin-md;
 
-        .@{mui-prefix}FormControl-root {
+        div.@{mui-prefix}FormControl-root {
             margin-bottom: @margin-xl;
         }
     }
