feat: Optimize the code editor style for workflow

--- a/apps/web/src/pages/workflow/views/editor/components/config-panel/components/code-editor/style.less
+++ b/apps/web/src/pages/workflow/views/editor/components/config-panel/components/code-editor/style.less
@@ -1,7 +1,7 @@
 .ms-code-editor {
     &-header {
         & &__title {
-            .@{mui-prefix}FormControl-root {
+            div.@{mui-prefix}FormControl-root {
                 margin: 0;
 
                 .@{mui-prefix}-focused {
